[package]
name = "pcapdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = "1.15.0"
rusqlite = "0.26.3"
pql = {path = "../pql"}

# [dependencies.mongodb]
# version = "2.1.0"
# default-features = false
# features = ["sync"]
