[package]
name = "pcapdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rusqlite = "0.26.3"
pql = {path = "../pql"}
actix-web = "2.0.0"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
actix-rt = "1.0.0"
ctrlc = "3.2.1"
tokio = { version = "1", features = ["full"] }

# [dependencies.mongodb]
# version = "2.1.0"
# default-features = false
# features = ["sync"]
